sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:26: error: value =! is not a member of Int
while (ecart>1 | i=!0 )
                  ^